<resources>
    <string name="app_name">Placemark</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_listPlacemark">List</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a Placemark Title </string>
    <string name="enter_username"> Your Username cannot be empty! </string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_image">Change Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="title_activity_placemark_maps">HYAH</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menu_main">HYAH</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Map</string>
    <string name="title_placemarks">Placemarks</string>
    <string name="title_profile">Profile</string>
    <string name="hint_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="button_avatar">Change Avatar</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_pronouns">Pronouns</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
</resources>