<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileEditActivity">

    <RelativeLayout
        android:layout_width="428dp"
        android:layout_height="745dp"
        android:layout_marginEnd="2dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:layout_width="413dp"
            android:layout_height="728dp"
            android:fillViewport="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_baseline_face_24"
                    app:layout_constraintBottom_toTopOf="@+id/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="56dp"
                    android:background="@android:color/transparent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_avatar"
                    android:textColor="@color/colorAccent"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toTopOf="@+id/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.534"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avatar"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="70dp"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="@string/hint_name"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avatar" />

                <EditText
                    android:id="@+id/rname"
                    android:layout_width="230dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="80dp"
                    android:autofillHints=""
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/ruser"
                    app:layout_constraintStart_toEndOf="@+id/name"
                    app:layout_constraintTop_toBottomOf="@+id/avatar"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="@string/hint_username"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/pronouns"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <EditText
                    android:id="@+id/ruser"
                    android:layout_width="230dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:autofillHints=""
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/rpronouns"
                    app:layout_constraintStart_toEndOf="@+id/username"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/pronouns"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="@string/hint_pronouns"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/birthday"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

                <EditText
                    android:id="@+id/rpronouns"
                    android:layout_width="230dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:autofillHints=""
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/hint_pronouns"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/rbirthday"
                    app:layout_constraintStart_toEndOf="@+id/pronouns"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:text="@string/hint_birthday"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pronouns" />

                <TextView
                    android:id="@+id/rbirthday"
                    android:layout_width="190dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/hint_birthday"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/rdescription"
                    app:layout_constraintStart_toEndOf="@+id/birthday"
                    app:layout_constraintTop_toBottomOf="@+id/pronouns"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/button_birthday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    app:icon="@drawable/ic_baseline_calendar_month_24"
                    app:iconTint="@color/colorAccent"
                    app:layout_constraintStart_toEndOf="@id/rbirthday"
                    app:layout_constraintTop_toBottomOf="@+id/rpronouns" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="175dp"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:text="@string/hint_placemarkDescription"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/birthday" />

                <EditText
                    android:id="@+id/rdescription"
                    android:layout_width="230dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints=""
                    android:inputType="text"
                    android:background="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/hint_placemarkDescription"
                    android:maxLength="25"
                    android:maxLines="5"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/description"
                    app:layout_constraintTop_toBottomOf="@+id/birthday" />

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    android:text="@string/button_cancel"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rdescription" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:text="@string/button_save"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toEndOf="@+id/button_cancel"
                    app:layout_constraintTop_toBottomOf="@+id/rdescription"
                    tools:ignore="TextContrastCheck"
                    style="?android:attr/borderlessButtonStyle"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>